--- a/6.html
+++ b/6.html
@@ -14,7 +14,7 @@
 
 
 <TABLE BORDER="1" WIDTH=60% BGCOLOR="#E6E6FA" align="right">
-<TR BGCOLOR="#CCCCFF" ALIGN="CENTER'>
+<TR BGCOLOR="#CCCCFF" ALIGN="CENTER">
 
 <TD><b> Урок </TD> <TD><b> 6"А"</TD> <TD><b>6"Б"</TD> <TD><b>6"В"</TD>
 </TR>
@@ -52,21 +52,21 @@
 <TD colspan="4" align="center"><b>Четверг</TD>
 </TR>
 
-<TD>1</TD><TD>Английский язык</TD><TD>Английский язык</TD><TD>Английский язык</TD>
+<TD>1</TD><TD>Русский язык</TD><TD>Литература</TD><TD>Английский язык</TD>
 </TR>
-<TD>2</TD><TD>Название урока</TD><TD>Название урока</TD><TD>Название урока</TD>
+<TD>2</TD><TD>Труды</TD><TD>ИЗО</TD><TD>Английский язык</TD>
 </TR>
-<TD>3</TD><TD>Название урока</TD><TD>Название урока</TD><TD>Название урока</TD>
+<TD>3</TD><TD>ИЗО</TD><TD>Труды<TD><TD>Китайский язык</TD>
 </TR>
 
 <TD colspan="4" align="center"><b>Пятница</TD>
 </TR>
 
-<TD>1</TD><TD>Название урока</TD><TD>Название урока</TD><TD>Название урока</TD>
+<TD>1</TD><TD>Математика</TD><TD>Математика</TD><TD>Математика</TD>
 </TR>
-<TD>2</TD><TD>Название урока</TD><TD>Название урока</TD><TD>Название урока</TD>
+<TD>2</TD><TD>Физическая культура</TD><TD>Физическая культура</TD><TD>Труды</TD>
 </TR>
-<TD>3</TD><TD>Название урока</TD><TD>Название урока</TD><TD>Название урока</TD>
+<TD>3</TD><TD>Китайский язык</TD><TD>Китайский язык</TD><TD>ИЗО</TD>
 </TR>
 
 </TABLE>
